--- a/styles/_main-content.scss
+++ b/styles/_main-content.scss
@@ -46,6 +46,9 @@
       font-weight: bold;
       // margin-top: 1rem;
     }
+    .work-list-item {
+      margin-left: 2rem;
+    }
 
     .wrapper {
       display: grid;
